--- a/vnwk-admin/link.htm
+++ b/vnwk-admin/link.htm
@@ -14,7 +14,7 @@
 <p><a href="destmenu.php" target="showframe">Destination & Index menu management</a></p>
 <p><a href="topic.php" target="showframe">Topic management</a></p>
 <p>Slide management</p>
-<p>User management</p>
+<p><a href="user_frame.php" target="showframe">User management</a></p>
 <p><a href="map_frame.php" target="showframe">Map management</a></p>
 <p>Back up</p>
 </body>
