Them link manage user,doi 3 frame thanh 2 frame
git-svn-id: svn://109.123.66.160/home/vnwkrepos@56 46499d64-588c-4cb2-b276-432f5e434212

--- a/trunk/vnwk-admin/link.htm
+++ b/trunk/vnwk-admin/link.htm
@@ -14,7 +14,7 @@
 <p><a href="destmenu.php" target="showframe">Destination & Index menu management</a></p>
 <p><a href="topic.php" target="showframe">Topic management</a></p>
 <p>Slide management</p>
-<p>User management</p>
+<p><a href="user_frame.php" target="showframe">User management</a></p>
 <p><a href="map_frame.php" target="showframe">Map management</a></p>
 <p>Back up</p>
 </body>
