Tao revisionmanagement.php, edit_edition.php, edition_frame.php, link.php Add more in Filter.php(remove script and php in edition), and more in Edition.php(edit edition) Add link.php alter link.htm and add a table in db(id,value) with a row is value=1(allowed up content) or = 2(bot allowed)
git-svn-id: svn://109.123.66.160/home/vnwkrepos@62 46499d64-588c-4cb2-b276-432f5e434212

--- a/trunk/vnwk-admin/body.htm
+++ b/trunk/vnwk-admin/body.htm
@@ -3,7 +3,7 @@
 
 <frameset cols="250,*">
 
-	<frame src="link.htm" >
+	<frame src="link.php" >
 	<frame src="content.htm" name="showframe">
 
 </frameset>
