--- a/vnwk-admin/body.htm
+++ b/vnwk-admin/body.htm
@@ -3,7 +3,7 @@
 
 <frameset cols="250,*">
 
-	<frame src="link.htm" >
+	<frame src="link.php" >
 	<frame src="content.htm" name="showframe">
 
 </frameset>
