--- a/trunk/js/tiny_mce/plugins/googlemaps/googlemaps.htm
+++ b/trunk/js/tiny_mce/plugins/googlemaps/googlemaps.htm
@@ -130,7 +130,7 @@ function load() {
 		var customUI = map.getDefaultUI();
         // Remove MapType.G_HYBRID_MAP
         customUI.maptypes.hybrid = false;
-        map.setUI(customUI)
+        map.setUI(customUI);
 
 		map.enableContinuousZoom();
 		map.enableDoubleClickZoom();
