--- a/js/tiny_mce/plugins/price/dialog.htm
+++ b/js/tiny_mce/plugins/price/dialog.htm
@@ -9,7 +9,7 @@
 <select name='price' id='price'>
 <option value="1"> (< $10) </option>
 <option value="2"> ($10-$50)</option>
-<option value="3">($50-100$)</option>
+<option value="3">($50-$100)</option>
 <option value="4">($100-$200)</option>
 <option value="5">($200-$500)</option>
 <option value="6"> ($500-$1000)</option>
