--- a/trunk/js/tiny_mce/plugins/preview/preview.html
+++ b/trunk/js/tiny_mce/plugins/preview/preview.html
@@ -1,19 +1,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <script language="javascript" src="../../tiny_mce_popup.js"></script>
+<link href="../../../../css/integrated.css" type="text/css" rel="stylesheet">
 <script type="text/javascript" src="jscripts/embed.js"></script>
 <script type="text/javascript">
 tinyMCEPopup.onInit.add(function(ed) {
 	var dom = tinyMCEPopup.dom;
 
-	dom.setHTML('content', ed.getContent());
+	dom.setHTML('postContent', ed.getContent());
+	ed.getElement().getParent().getElementById('preview').value = 1;
 });
 
 document.write('<base href="' + tinyMCEPopup.getWindowArg("base") + '">');
 </script>
 <title>{#preview.preview_desc}</title>
 </head>
-<body id="content">
+<body id="contentTable">
+<div id="postContent">
 <!-- Gets filled with editor contents -->
+</div>
 </body>
 </html>
