--- a/trunk/js/tiny_mce/plugins/googlemaps/googlemaps.htm
+++ b/trunk/js/tiny_mce/plugins/googlemaps/googlemaps.htm
@@ -2,11 +2,22 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Googlemaps</title>
-<script type="text/javascript" src="../../tiny_mce.js"></script> 
+
 <script type="text/javascript" src="../../tiny_mce_popup.js?v=307"></script>
 <script type="text/javascript" src="../../utils/mctabs.js"></script>
 <script type="text/javascript" src="js/dialog.js?v=307"></script>
-  <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAV1hMY6P-vcrStESIcmxsyBSg0YMtASE5KdM7LALqADHM9SZ_PBTZqozQ8fKlIDHry-cBnAxWYeYpSw" type="text/javascript"></script><style type="text/css">
+  <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAV1hMY6P-vcrStESIcmxsyBSg0YMtASE5KdM7LALqADHM9SZ_PBTZqozQ8fKlIDHry-cBnAxWYeYpSw" type="text/javascript"></script>
+ <script type="text/javascript" src="../../tiny_mce.js"></script>
+<script language="javascript">
+tinyMCE.init({
+	// General options
+	mode : "exact",
+	elements: "description",
+	theme: "advanced"
+});
+</script> 
+ <style type="text/css">
+  
 #cat {
 	height: 20px;
 }
@@ -20,25 +31,25 @@
 	vertical-align: middle;
 }
 	#cat option[value="others"] {
-		background-image: url(/images/gmap/icons/marker.png);
+		background-image: url(../../../../images/gmap/icons/marker.png);
 	}
 	#cat option[value="restaurant"] {
-		background-image: url(/images/gmap/icons/restaurant.png);
+		background-image: url(../../../../images/gmap/icons/restaurant.png);
 	}
 	#cat option[value="beach"] {
-		background-image: url(/images/gmap/icons/beach.png);
+		background-image: url(../../../../images/gmap/icons/beach.png);
 	}
 	#cat option[value="bridge"] {
-		background-image: url(/images/gmap/icons/bridgemodern.png);
+		background-image: url(../../../../images/gmap/icons/bridgemodern.png);
 	}
 	#cat option[value="shop"] {
-		background-image: url(/images/gmap/icons/shoppingmall.png);
+		background-image: url(../../../../images/gmap/icons/shoppingmall.png);
 	}
 	#cat option[value="bank"] {
-		background-image: url(/images/gmap/icons/bank.png);
+		background-image: url(../../../../images/gmap/icons/bank.png);
 	}
 	#cat option[value="hotel"] {
-		background-image: url(/images/gmap/icons/hotel.png);
+		background-image: url(../../../../images/gmap/icons/hotel.png);
 	}
 </style>
 <script type="text/javascript">
@@ -48,7 +59,7 @@ var map;
 var markerD2;
 
 var mapIcons = new Array();
-mapDir = "/images/gmap/icons/";
+mapDir = "../../../../images/gmap/icons/";
 mapIcons["others"] = "marker.png";
 mapIcons["restaurant"] = "restaurant.png";
 mapIcons["beach"] = "beach.png";
@@ -56,10 +67,10 @@ mapIcons["bridge"] = "bridgemodern.png";
 mapIcons["shop"] = "shoppingmall.png";
 mapIcons["bank"] = "bank.png";
 mapIcons["hotel"] = "hotel.png";
-
+var vnwkIcon = new GIcon();
 
 function createMarker(point, cat) {
-	var vnwkIcon = new GIcon();
+	
 	vnwkIcon.image = mapDir + mapIcons[cat];
 	vnwkIcon.iconSize = new GSize(32, 37);
 	vnwkIcon.shadowSize = new GSize(0, 0);
@@ -101,7 +112,7 @@ function showAddress(address)
 					map.setCenter(point, 13);
 					var customUI = map.getDefaultUI();
 					customUI.maptypes.hybrid = false;
-					map.setUI(customUI)
+					map.setUI(customUI);
 					var marker = createMarker(point, {icon:vnwkIcon, draggable: true});
 					map.addOverlay(marker);
 					marker.enableDragging();
@@ -200,7 +211,7 @@ function load() {
 							</td>
 						</tr>
 						<tr>
-							<td>Description</td><td><textarea cols="58" rows="3" id="description" name="description"></textarea></td>
+                                                    <td>Description</td><td><textarea style="width:100%;" id="description" name="description"></textarea></td>
 						</tr>
 					</table>
 				</fieldset>
@@ -269,29 +280,21 @@ function load() {
 				</fieldset>
 
 			</div>
-		</div>
 
+		</div>
 	<div class="mceActionPanel">
 		<div style="float: left">
-			<input type="button" id="insert" name="insert" value="{#insert}" onclick="ExampleDialog.insert();" />
+			<input type="button" id="insert" name="insert" value="Insert" onclick="ExampleDialog.insert();" />
 		</div>
 
 		<div style="float: right">	
-			<input type="button" id="cancel" name="cancel" value="{#cancel}" onclick="tinyMCEPopup.close();" />
+			<input type="button" id="cancel" name="cancel" value="Cancel" onclick="tinyMCEPopup.close();" />
 		</div>
 	</div>
 
 </form>
 
-<script type="text/javascript" src="../../tiny_mce.js"></script>
 <script language="javascript">
-tinyMCE.init({
-	// General options
-	mode : "exact",
-	elements: "description",
-	theme: "advanced"
-});
-
 function changeMarker() {
 	cat = document.getElementById("cat").value;
 	point = markerD2.getLatLng();
